corrected the payment form responsiveness on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1334,6 +1334,13 @@ div.gap {
   }
 }
 
+@media screen and (max-width: 400px) {
+ .payment{
+  margin-left: -10px;
+  margin-top: 30px;
+ }
+}
+
 @media screen and (max-width: 800px) {
   div.swipe {
     display: none;
